k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haiku-backend
  namespace: haiku-battle
  labels:
    app.kubernetes.io/component: backend
spec:
  selector:
    app.kubernetes.io/component: backend
 ports:
 - protocol: TCP
    name: http
    port: 80
    targetPort: 3000
  type: ClusterIP
