k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haiku-frontend
  namespace: haiku-battle
  labels:
    app.kubernetes.io/component: frontend
spec:
  selector:
    app.kubernetes.io/component: frontend
 ports:
 - protocol: TCP
    name: http
    port: 80
    targetPort: 3000
  type: ClusterIP
